# cli-workspace

./: Cargo.toml  README.md
config-loader-trait/: Cargo.toml
config-loader-trait/src/: lib.rs
load-config-derive/: Cargo.toml
load-config-derive/src/: lib.rs
rust-cli/: Cargo.toml  build.rs  config.yml
rust-cli/src/: main.rs
